# geopolrisk-py

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Company data test case.xlsx  Dockerfile  First run.py  GeoPolRisk.py  Import.py  MANIFEST.in  README.md  Test.ipynb  The GeoPolRisk Module Documentation.md  __init__.py  api.py  core.py  error.xlsx  error1.xlsx  export.csv  export.json  gcalc.py  gprs.py  log.py  main.py  methods.py  oert_test.py  operations.py  paper.bib  paper.md  plots.py  pyproject.toml  requirements.txt  setup.py  test extract.py  test.py  try.py  warnings.py
.github/workflows/: draft-pdf.yml  tests.yml
Older SQL/: dataset.csv  db - backup.sqlite3  pricedata.csv  wgidataset.xlsx
docs/: analysis.rst  background.rst  conf.py  contribution.rst  index.rst  installation.rst  methods.rst  references.rst  requirements.txt  testing.rst  usage.rst
docs/_build/doctrees/: analysis.doctree  background.doctree  company.doctree  contribution.doctree  environment.pickle  index.doctree  installation.doctree  metadata.doctree  methods.doctree  references.doctree  testing.doctree  usage.doctree
docs/_build/doctrees/notebooks/: example.doctree
docs/_build/html/: .buildinfo  analysis.html  background.html  company.html  contribution.html  genindex.html  index.html  installation.html  metadata.html  methods.html  objects.inv  references.html  search.html  searchindex.js  testing.html  usage.html
docs/_build/html/.doctrees/: company.doctree  contribution.doctree  environment.pickle  index.doctree  installation.doctree  methods.doctree  references.doctree  testing.doctree
docs/_build/html/_sources/: analysis.rst.txt  background.rst.txt  company.rst.txt  (+8 more)
docs/_static/: Raw material documentation - supplementary material.xlsx  custom.css
docs/notebooks/: example.ipynb
examples/: example_guide.ipynb
geopolr/: __init__.py
geopolr/gprscalc/: gprsplots.py
geopolr/lib/: commodityHS.json
geopolr/tests/: comtrade.xlsx  test.py
geopolrisk/: __init__.py  console.py  core.py  gcalc.py  operations.py  requirements.txt  test.py
geopolrisk-py/: CF_GOC.py  Production.xlsx  Sankey.ipynb  error.xlsx  test.py
geopolrisk-py/assessment/: __init__ copy.py  __init__.py  config.yaml  console.py  core.py  gcalc.py  gprs.py  gprsio.py  gprstrade.py  jing.py  main.py  map.py  meta.yaml  mineproduction.py  operations.py  utils copy.py  utils.py
geopolrisk-py/assessment/Exceptions/: warningsgprs.py
geopolrisk-py/lib/: Library.db  Production.xlsx  reporterISO.json  test.db  test.py  wgi.json  yearlyAVGprice.json
geopolrisk-py/tests/: __init__.py  comtrade.xlsx  defaults.py  error.xlsx  sample trade data.xlsx  test.py  test_case_1.py  test_case_2.py  test_case_3.py  test_inputs.py  test_prod.py  test_trade.py
geopolrisk/Exceptions/: warningsgprs.py
geopolrisk/assessment/: #__init__.py  __init__.py  console.py  core.py  database.py  geopolrisk.py  gprsplots.py  main.py  utils.py
geopolrisk/lib/: Library.db  world_mining_data.db
geopolrisk/oert/: baci-input-files-to-sqlite.ipynb
geopolrisk/tests/: .~lock.Company data.xlsx#  Company data.xlsx  Testing case - tool.xlsx  __init__.py  __int__.py  defaults.py  test_case_1.py  test_case_2.py  test_case_3.py  test_case_utils.py  test_core.py  test_database.py  test_geopolrisk_data_results_from_excelfile.py  test_main.py  test_util.py
lib/: Countries.xlsx  NOR.csv  NOR.xlsx  Production.xlsx  commodity_hs.csv  datarecords.db  datarecordsOLD.db  metalsg.csv  pricedata.csv  reporterAreas.json  reporter_iso.csv  test.py  yearlyAVGprice.json  ~$Production.xlsx
lib/Backup_Working 1010/: datarecords.db  inputs.db
lib/OldRecords/: Code.xlsx  hs.xlsx  hsF.json  metalsg.csv  metalslist.json  rep.json  reporter.xlsx  sd.xlsx
output/: database.csv  database.json  export.csv
src/geopolrisk/: First run.py  GeoPolRisk.py  __init__.py  api.py  export to db.py  gprs.py  main.py  plots.py  populating db.py  reporter.xlsx
src/geopolrisk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/geopolrisk/assessment/: __init__.py  api.py  core.py  database.py  main.py  utils.py
src/geopolrisk/lib/: NOR.xlsx  README.md  datarecords.db  hs.json  wgi.db  wgidataset.xlsx  world_mining_data.db
src/geopolrisk/output/: database.json  export.csv
tests/: README.md  __init__.py  __int__.py  defaults.py  run_tests.py  test.py  test_core.py  test_database.py  test_geopolrisk_data_results_from_excelfile.py  test_main.py  test_util.py  try.py
(+16 files in other folders)
